# panamax

./: Cargo.toml
src/: download.rs  rustup.rs
