[package]
name = "panamax"
version = "1.0.6"
authors = ["k3d3 <k@3d3.ca>"]
description = "Mirror rustup and crates.io repositories, for offline Rust and Cargo usage."
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/panamax-rs/panamax"
repository = "https://github.com/panamax-rs/panamax"
edition = "2021"

[dependencies]
askama = "0.11.1"
askama_warp = "0.12.0"
bytes = "1.1.0"
clap = { version = "4.0.0", features = ["derive"] }
console = "0.15.2"
env_logger = "0.9.0"
futures = "0.3.17"
futures-util = "0.3.17"
git2 = "0.15"
glob = "0.3.0"
include_dir = "0.7.3"
indicatif = "0.17.0-rc.10"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
sha2 = "0.10.6"
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.7.4", features = ["codec"] }
toml = "0.5.8"
url = "2.2.2"
walkdir = "2.3.2"
warp = { version = "0.3.1", features = ["tls"] }

[features]
default = []
vendored-openssl = ["reqwest/native-tls-vendored"]
